# everything

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh
src/: cli.rs  daemon.rs  database.rs  indexer.rs  lib.rs  main.rs  search.rs  watcher.rs
