[package]
name = "everything"
version = "0.1.0"
edition = "2021"
authors = ["user"]
description = "高速ファイル検索CLIツール"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
rusqlite = { version = "0.29", features = ["bundled"] }
notify = "6.0"
walkdir = "2.0"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
dirs = "5.0"
libc = "0.2"
